--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
     "debug": "~2.6.3",
     "express": "^4.15.3",
     "jade": "^1.11.0",
+    "knex": "^0.14.6",
     "morgan": "^1.8.2",
+    "pg": "^7.4.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
+    "knex-logger": "^0.1.0",
     "nodemon": "^1.12.0",
     "react-scripts": "1.0.10"
   },
   "scripts": {
-    "start":
-      "concurrently \"react-scripts start\" \"nodemon server/server.js\"",
+    "start": "concurrently \"react-scripts start\" \"nodemon server/server.js\"",
     "build": "react-scripts build && mv build server",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
