--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "debug": "~2.6.3",
     "express": "^4.15.3",
     "jade": "^1.11.0",
+    "jquery": "^3.3.1",
     "knex": "^0.14.6",
     "morgan": "^1.8.2",
     "pg": "^7.4.3",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
