added non working twitter api

--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ DB_PASS=labber
 DB_NAME=twitter_battle
 DB_SSL=true if heroku
 DB_PORT=5432
+
+CONSUMER_KEY=Khuk3mzGeaajyOKCme3Bofm8R
+CONSUMER_SECRET=21WFSIVbyviecBJQlyfuYqpLYbZQe7DBCzrRK1lp4dkIpSyJ6R
+ACCESS_TOKEN=9083299516943933450hal067oz2YBT6ctGzQUa7QMxyMJHLS  
+ACCESS_TOKEN_SECRET=XBNPYI6WEYMtYBNKHuXSjTQpBqOdwMpTODjgXPLNxncsA
