--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pg": "^7.4.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "twitter": "^1.7.1"
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
