--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cookie-parser": "^1.4.3",
     "debug": "~2.6.3",
     "express": "^4.15.3",
+    "get-twitter-bearer-token": "^1.0.0",
     "jade": "^1.11.0",
     "jquery": "^3.3.1",
     "knex": "^0.14.6",
@@ -14,7 +15,8 @@
     "pg": "^7.4.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "twitter": "^1.7.1"
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
