--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "jquery": "^3.3.1",
     "knex": "^0.15.0",
     "morgan": "^1.8.2",
+    "multer": "^1.3.1",
     "pg": "^7.4.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
+    "request": "^2.87.0",
     "twitter": "^1.7.1"
   },
   "devDependencies": {
