--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
+    "reactjs-popup": "^1.1.1",
     "request": "^2.87.0",
     "twitter": "^1.7.1"
   },
