--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "multer": "^1.3.1",
     "pg": "^7.4.3",
     "react": "^16.4.1",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
     "reactjs-popup": "^1.1.1",
