--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "debug": "~3.1.0",
     "get-twitter-bearer-token": "^1.0.0",
     "jade": "^1.11.0",
     "jquery": "^3.3.1",
     "knex": "^0.15.0",
-    "morgan": "^1.8.2",
+    "morgan": "^1.9.1",
     "multer": "^1.3.1",
     "pg": "^7.4.3",
     "react": "^16.4.1",
@@ -24,8 +24,8 @@
   "devDependencies": {
     "concurrently": "^3.5.0",
     "knex-logger": "^0.1.0",
-    "nodemon": "^1.12.0",
-    "react-scripts": "1.1.4"
+    "nodemon": "^1.18.9",
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "start": "concurrently \"react-scripts start\" \"nodemon server/server.js\"",
@@ -33,5 +33,11 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
